Setup infrastructure for navigating sketches

--- a/src/index.html
+++ b/src/index.html
@@ -3,19 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Vanilla Bean - Frameworkless SPAs</title>
+  <title>p5.js Sketchbook</title>
 </head>
 <body>
   <div class="page-container">
     <header>
-      <h1>Vanilla Bean - Frameworkless SPAs</h1>
+      <h1 class="page-title">
+        <a href="/">p5.js Sketchbook</a>
+      </h1>
       <nav id="nav">
         <ul class="nav-list">
           <li class="nav-item">
-            <a class="nav-link" href="/">Winter</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/Summer">Summer</a>
+            <a class="nav-link" href="/sketchbook">Sketches</a>
           </li>
         </ul>
       </nav>
@@ -24,7 +23,7 @@
     <main id="content"></main>
   
     <footer>
-      Made with Vanilla Javascript
+      An artistic.codes production
     </footer>
   </div>
 </body>
