Minor style changes

--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>p5.js Sketchbook</title>
+  <title>Sketchbook</title>
 </head>
 <body>
   <header>
     <h1 class="page-title">
-      <a href="/">p5.js Sketchbook</a>
+      <a href="/">Sketchbook</a>
     </h1>
   </header>
     
