--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,102 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sketchbook</title>
+  <style>
+    #loading {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      left: 0;
+      background: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      
+    }
+    .loading-ring {
+      color: #a256ff;
+      stroke-dasharray: 25 100;
+      -webkit-animation: spin 2s infinite normal linear;
+      -moz-animation: spin 2s infinite normal linear;
+      -o-animation: spin 2s infinite normal linear;
+      animation: spin 2s infinite normal linear;
+    }
+    @-webkit-keyframes spin {
+      0%   { 
+        stroke-dashoffset: 25;
+        stroke-dasharray: 0 101;
+      }
+      50% { 
+        stroke-dashoffset: 125;
+        stroke-dasharray: 101 0;
+      }
+      100% { 
+        stroke-dashoffset: 125;
+        stroke-dasharray: 0 101;
+      }
+    }
+    @-moz-keyframes spin {
+      0%   { 
+        stroke-dashoffset: 25;
+        stroke-dasharray: 0 101;
+      }
+      50% { 
+        stroke-dashoffset: 125;
+        stroke-dasharray: 101 0;
+      }
+      100% { 
+        stroke-dashoffset: 125;
+        stroke-dasharray: 0 101;
+      }
+    }
+    @-o-keyframes spin {
+      0%   { 
+        stroke-dashoffset: 25;
+        stroke-dasharray: 0 101;
+      }
+      50% { 
+        stroke-dashoffset: 125;
+        stroke-dasharray: 101 0;
+      }
+      100% { 
+        stroke-dashoffset: 125;
+        stroke-dasharray: 0 101;
+      }
+    }
+    @keyframes spin {
+      0%   { 
+        stroke-dashoffset: 25;
+        stroke-dasharray: 0 101;
+      }
+      50% { 
+        stroke-dashoffset: 125;
+        stroke-dasharray: 101 0;
+      }
+      100% { 
+        stroke-dashoffset: 125;
+        stroke-dasharray: 0 101;
+      }
+    }
+  </style>
 </head>
 <body>
+  <div id="loading">
+    <svg
+      class="loading-ring"
+      height="40"
+      width="40"
+    >
+      <circle
+        stroke-width="4"
+        stroke="currentColor"
+        fill="transparent"
+        r="16"
+        cx="20"
+        cy="20"
+      />
+    </svg>
+  </div>
   <header>
     <h1 class="page-title">
       <a href="/">Sketchbook</a>
